Potential fix for weird image width on mobile

--- a/themes/wipdev/assets/css/main.css
+++ b/themes/wipdev/assets/css/main.css
@@ -262,6 +262,7 @@ blockquote * {
 
     aside .links img {
         height: 30px;
+        max-width: 30px
     }
 
     .bmc-container {
